# ProgettoASD_22_23

./: .gitignore  CMakeLists.txt  README.md  README.txt  exec_time.c  exec_time.h  period.c  period.h  project.gitignore  utils.h
src/: CMakeLists.txt  exec_time.c  exec_time.h  main.c  string_gen.c  string_gen.h  utils.c
